# svector

./: .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  meson.build
.github/workflows/: main.yml  meson_build_test.yml
include/ankerl/: svector.h
scripts/: build.py  setup.sh  test.sh
scripts/lint/: lint-clang-format.py  lint-version.py
src/lib/: meson.build
src/lib/ankerl/: svector.h
src/test/: assign.cpp  assignment_operators.cpp  at.cpp  automatic_capacity.cpp  bad_alloc.cpp  basic_api.cpp  comparisons.cpp  ctors.cpp  emplace.cpp  emplace_back.cpp  erase.cpp  hello_world.cpp  insert.cpp  member_types.cpp  memory_resource_experiment.cpp  meson.build  pop_back.cpp  push_back.cpp  reserve.cpp  resize.cpp  reverse_iterators.cpp  round_up.cpp  show_comparison.cpp  swap.cpp  versions.cpp
src/test/app/: Counter.cpp  Counter.h  print.h
src/test/bench/: bench_accumulate.cpp  bench_emplace_back.cpp  bench_fill_front.cpp  bench_fill_random.cpp  bench_push_back.cpp  bench_push_pop.cpp  bench_randomaccess.cpp  bench_sort_shuffle.cpp
subprojects/: abseil-cpp.wrap
test/: alignment.cpp  basic_api.cpp  includes_only.cpp  insert.cpp  member_types.cpp  meson.build  n_eq_0.cpp  reserve.cpp  swap.cpp  versions.cpp
test/app/: Counter.cpp  Counter.h  boost_absl.h
test/bench/: bench_accumulate.cpp  bench_emplace_back.cpp  bench_fill_front.cpp  bench_fill_random.cpp  bench_push_back.cpp  bench_randomaccess.cpp  bench_sort_shuffle.cpp
test/fuzz/: FuzzedDataProvider.h  api.cpp
test/unit/: assign.cpp  assignment_operators.cpp  automatic_capacity.cpp  bad_alloc.cpp  ctors.cpp  erase.cpp  fuzz_corpus.cpp  insert.cpp  non_movable.cpp  resize.cpp  reverse_iterators.cpp  show_comparison.cpp  shrink_to_fit.cpp  std_erase.cpp
